--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Google Analytics -->
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTVJXS66Y4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CTVJXS66Y4');
+</script>
 </head>
 
 <body>
@@ -218,3 +225,4 @@
 
 
 </html>
+
