--- a/index.html
+++ b/index.html
@@ -119,11 +119,17 @@
                     <select id="gradeFilter" aria-label="급수 필터">
                         <option value="">전체</option>
                         <option value="8급">8급</option>
+                        <option value="준7급">준7급</option>
                         <option value="7급">7급</option>
+                        <option value="준6급">준6급</option>
                         <option value="6급">6급</option>
+                        <option value="준5급">준5급</option>
                         <option value="5급">5급</option>
+                        <option value="준4급">준4급</option>
                         <option value="4급">4급</option>
+                        <option value="준3급">준3급</option>
                         <option value="3급">3급</option>
+                        <option value="준특급">준특급</option>
                         <option value="특급">특급</option>
                     </select>
                 </div>
@@ -225,4 +231,5 @@
 
 
 </html>
+
 
