--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
         <div class="result-info">
             <span id="resultCount">1800개 한자</span>
         </div>
-
+        <!-- 활성 필터 칩 표시 -->
+        <div id="activeFilters" class="active-filters" style="display: none;">
+            <!-- 필터 칩이 동적으로 추가됩니다 -->
+        </div>
         <div class="table-container">
             <table id="hanjaTable">
                 <caption class="sr-only">교육용 한자 1800자 목록 - 훈음, 구분, 교육수준, 급수, 장단음 정보 포함</caption>
@@ -229,6 +232,7 @@
         }
     </script>
 </body>
+
 
 
 </html>
