검색 X버튼 및 모든 필터 초기화 버튼 추가

--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
                     </button>
                 </div>
                 <div class="dark-mode-toggle">
+                    <button id="resetAllFiltersBtn" class="reset-all-btn" title="모든 필터 초기화" aria-label="모든 필터 초기화">
+                        🔄 필터 초기화
+                    </button>
                     <button id="darkModeBtn" class="dark-mode-btn" title="다크모드 전환" aria-label="다크모드 전환">
                         🌙
                     </button>
