--- a/index.html
+++ b/index.html
@@ -297,7 +297,18 @@
             wcs_do();
         }
     </script>
+    <!-- 네이버 애널리틱스 추적 코드 시작 -->
+    <script type="text/javascript" src="//wcs.pstatic.net/wcslog.js"></script>
+    <script type="text/javascript">
+    if(!wcs_add) var wcs_add = {};
+    wcs_add["wa"] = "58d0b976a4cbcc";
+    if(window.wcs) {
+      wcs_do();
+}
+</script>
+<!-- 네이버 애널리틱스 추적 코드 끝 -->
 </body>
+
 
 
 
