--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="교육용 한자, 한자 검색, 기초한자, 한문교육, 중학교 한자, 고등학교 한자, 한자 급수, 장단음, 표준국어대사전">
     <meta name="author" content="FSChronicles">
     <meta name="robots" content="index, follow">
+    <link rel="icon" href="icon.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://hanja1800.github.io/">
@@ -323,4 +324,8 @@
         <!-- 네이버 애널리틱스 추적 코드 끝 -->
     </div>
 </body>
+
+
+
+
 </html>
