--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
     <!-- 기본 설정 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Title: 군더더기 없이 핵심 대상과 기능만 명시 -->
+   
     <title>기초한자 1800자 장단음 데이터베이스</title>
 
-    <!-- Description: 데이터의 범위와 기준을 건조하게 서술 -->
     <meta name="description" content="중·고등학교 한문교육용 기초한자 1,800자의 장단음 구분 및 표준 발음 데이터. 표준국어대사전 기준 장음/단음 분류 및 급수 정보 수록.">
 
-    <!-- Keywords: 사실 기반의 명사 나열 -->
     <meta name="keywords" content="한자 장단음, 기초한자 1800자, 표준 발음, 장음, 단음, 한자 급수, 데이터베이스">
 
-    <!-- Author: '블로그'라는 명칭보다는 데이터 관리 주체로 표기 -->
     <meta name="author" content="우리말의 장단음을 공부하는 블로그">
     <meta name="robots" content="index, follow">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://hanja1800.github.io/">
 
-    <!-- Open Graph: SNS 공유 시 미리보기 (홍보성 멘트 제거) -->
+    <!-- Open Graph: SNS 공유 시 미리보기 -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hanja1800.github.io/">
     <meta property="og:title" content="기초한자 1800자 장단음 DB">
@@ -305,3 +301,4 @@
 </body>
 
 </html>
+
