--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <header>
             <h1>📚 교육용 한자 장단음 검색</h1>
-            <p class="subtitle">한문교육용 기초한자 장단음</p>
+         <!-- <p class="subtitle">한문교육용 기초한자 장단음</p> -->
         </header>
         <h2 class="sr-only">검색 및 필터</h2>
         <div class="search-section">
@@ -301,5 +301,6 @@
 </body>
 
 </html>
+
 
 
