--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="description" content="한문교육용 기초한자 1,800자의 장단음 구분 및 표준 발음 데이터. 표준국어대사전 기준 장음/단음 분류 및 급수 정보 수록.">
 
-    <meta name="keywords" content="한자 장단음, 기초한자 1800자, 표준 발음, 장음, 단음, 한자 급수">
+    <meta name="keywords" content="장단음, 한자 장단음, 표준 발음, 장음, 단음, 한자 훈음, 기초한자 발음">
 
     <meta name="author" content="우리말의 장단음을 공부하는 블로그">
     <meta name="robots" content="index, follow">
@@ -301,6 +301,7 @@
 </body>
 
 </html>
+
 
 
 
