--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
 
     <!-- 네이버 애널리틱스 추적 코드 (중복 제거 및 하단 통합) -->
-    <script type="text/javascript" src="//wcs.pstatic.net/wcslog.js"></script>
+    <script async type="text/javascript" src="//wcs.pstatic.net/wcslog.js"></script>
     <script type="text/javascript">
         if (!wcs_add) var wcs_add = {};
         wcs_add["wa"] = "58d0b976a4cbcc";
@@ -303,5 +303,6 @@
         }
     </script>
 </body>
+
 
 </html>
