--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
         gtag('js', new Date());
         gtag('config', 'G-CTVJXS66Y4');
 
+        // FORCE CLEANUP: Unregister any existing Service Workers (Zombie Cache Fix)
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.getRegistrations().then(function (registrations) {
+                for (let registration of registrations) {
+                    registration.unregister().then(function () {
+                        console.log('ServiceWorker unregistered by force');
+                    });
+                }
+            });
+        }
+
         // Auto-Update Checker
         (async function checkVersion() {
             try {
