--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     localStorage.setItem('appVersion', latestVersion);
 
                     if (currentVersion) {
-                        alert('새로운 업데이트가 있습니다. 페이지를 새로고침합니다.');
+                        // Silent update
                         location.reload(true);
                     }
                 }
