--- a/radicals.html
+++ b/radicals.html
@@ -107,7 +107,7 @@
             <div class="search-filter-grid">
                 <div class="search-input-wrapper">
                     <input type="text" id="radicalSearchInput" placeholder="부수 검색 (예: 水, 人, 心...)" autocomplete="off"
-                        autofocus aria-label="부수 검색">
+                        aria-label="부수 검색">
                     <button id="clearRadicalSearchBtn" class="clear-search-btn" aria-label="검색어 삭제">×</button>
                 </div>
 
