--- a/radicals.html
+++ b/radicals.html
@@ -182,7 +182,7 @@
 
     <!-- Script -->
     <script src="common.js" defer></script>
-    <script src="radicals.js?v=20251219_sort" defer></script>
+    <script src="radicals.js?v=20251219_v8" defer></script>
 
     <!-- 최근 본 한자 모달 위젯 -->
     <!-- 최근 본 한자 모달 위젯 -->
