--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
     <!-- Script 위치 조정 및 Defer -->
     <script src="common.js" defer></script>
-    <script src="script.js?v=20251219_final" defer></script>
+    <script src="script.js?v=20251219_v10" defer></script>
 
     <!-- 최근 본 한자 모달 위젯 -->
     <div id="recentModal" class="recent-modal" style="display: none;">
