--- a/radicals.html
+++ b/radicals.html
@@ -77,7 +77,9 @@
                     localStorage.setItem('appVersion', latestVersion);
 
                     if (currentVersion) {
-                        location.reload(true);
+                        if (confirm('새로운 버전이 업데이트되었습니다. 원활한 사용을 위해 페이지를 새로고침 하시겠습니까?')) {
+                            location.reload(true);
+                        }
                     }
                 }
             } catch (e) {
