--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <!-- 스타일시트 (캐시 갱신) -->
     <link rel="stylesheet" href="style.css?v=20251213">
 
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#fdcb6e">
+
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTVJXS66Y4"></script>
     <script>
@@ -71,14 +75,16 @@
         gtag('js', new Date());
         gtag('config', 'G-CTVJXS66Y4');
 
-        // FORCE CLEANUP: Unregister any existing Service Workers (Zombie Cache Fix)
+        // Register Service Worker for PWA
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.getRegistrations().then(function (registrations) {
-                for (let registration of registrations) {
-                    registration.unregister().then(function () {
-                        console.log('ServiceWorker unregistered by force');
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(function (registration) {
+                        console.log('ServiceWorker registered:', registration.scope);
+                    })
+                    .catch(function (error) {
+                        console.log('ServiceWorker registration failed:', error);
                     });
-                }
             });
         }
 
