--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         rel="stylesheet">
 
     <!-- 스타일시트 (캐시 갱신) -->
-    <link rel="stylesheet" href="style.css?v=20251213">
+    <link rel="stylesheet" href="css/base.css">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
@@ -356,5 +356,6 @@
         }
     </script>
 </body>
+
 
 </html>
