--- a/radicals.html
+++ b/radicals.html
@@ -44,7 +44,7 @@
         rel="stylesheet">
 
     <!-- 스타일시트 (기존 스타일 재사용) -->
-    <link rel="stylesheet" href="style.css?v=20251213">
+    <link rel="stylesheet" href="css/base.css">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
@@ -224,5 +224,6 @@
         }
     </script>
 </body>
+
 
 </html>
