--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
     <!-- 스타일시트 (캐시 갱신) -->
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
@@ -359,3 +361,4 @@
 
 
 </html>
+
