--- a/radicals.html
+++ b/radicals.html
@@ -45,6 +45,8 @@
 
     <!-- 스타일시트 (기존 스타일 재사용) -->
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
@@ -227,3 +229,4 @@
 
 
 </html>
+
