--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
     </footer>
 
     <!-- Script 위치 조정 및 Defer -->
-    <script src="common.js" defer></script>
-    <script src="script.js?v=20251219_v12" defer></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/index.js" defer></script>
 
     <!-- 최근 본 한자 모달 위젯 -->
     <div id="recentModal" class="recent-modal" style="display: none;">
@@ -361,4 +361,5 @@
 
 
 </html>
+
 
