--- a/radicals.html
+++ b/radicals.html
@@ -193,8 +193,8 @@
     </footer>
 
     <!-- Script -->
-    <script src="common.js" defer></script>
-    <script src="radicals.js?v=20251219_v12" defer></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/radicals.js" defer></script>
 
     <!-- 최근 본 한자 모달 위젯 -->
     <!-- 최근 본 한자 모달 위젯 -->
@@ -229,4 +229,5 @@
 
 
 </html>
+
 
