--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- 기본 설정 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="msvalidate.01" content="FEA1D8C5838330BD7672F953A82A13C8" />
     <!-- 캐시 제어 -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Expires" content="0">
@@ -361,5 +361,6 @@
 
 
 </html>
+
 
 
